After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737900 - [PATCH] NetworkManager crashes on i386 right after start
[PATCH] NetworkManager crashes on i386 right after start
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-10-04 19:40 UTC by Lubomir Rintel
Modified: 2014-10-05 09:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Suggested patch (1.00 KB, patch)
2014-10-04 19:40 UTC, Lubomir Rintel
none Details | Review

Description Lubomir Rintel 2014-10-04 19:40:59 UTC
Created attachment 287723 [details] [review]
Suggested patch

NetworkManager:ERROR:devices/nm-device.c:7089:nm_device_update_hw_address: assertion failed: (hwaddrlen <= sizeof (priv->hw_addr))
Aborted (core dumped)

See attached patch