src/devices/nm-device.c
@@ -7086,7 +7086,7 @@ nm_device_update_hw_address (NMDevice *self)
 		return;
 
 	hwaddr = nm_platform_link_get_address (ifindex, &hwaddrlen);
-	g_assert (hwaddrlen <= sizeof (priv->hw_addr));
+
 	if (hwaddrlen) {
 		if (!priv->hw_addr || !nm_utils_hwaddr_matches (priv->hw_addr, -1, hwaddr, hwaddrlen)) {
 			g_free (priv->hw_addr);
